force-app/main/default/objects/AutoNumber__c/AutoNumber__c.object-meta.xml
<CustomObject>
    <description>Stores information related to custom auto-number functionality.</description>
    <label>AutoNumber</label>
    <nameField>
        <label>Auto-Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutoNumbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>