force-app/main/default/objects/AutoNumber__c/fields/Display_Format__c.field-meta.xml
<CustomField>
    <fullName>Display_Format__c</fullName>
    <description>The format for the auto-numbered field including number of digits and, if desired, a prefix.</description>
    <inlineHelpText>The format for the auto-numbered field including number of digits and, if desired, a prefix.</inlineHelpText>
    <label>Display Format</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>