force-app/main/default/objects/AutoNumber__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The API name of the field that contains the auto-number.</description>
    <inlineHelpText>The API name of the field that contains the auto-number.</inlineHelpText>
    <label>Field API Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>