force-app/main/default/objects/AutoNumber__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the auto-number format is active.</description>
    <inlineHelpText>When selected, the auto-number format is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>