force-app/main/default/objects/AutoNumber__c/fields/Max_Used_Number__c.field-meta.xml
<CustomField>
    <fullName>Max_Used_Number__c</fullName>
    <inlineHelpText>The highest auto-number used for this format.</inlineHelpText>
    <label>Max Used Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>