force-app/main/default/objects/AutoNumber__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The API name of the object for the auto-number.</description>
    <inlineHelpText>The API name of the object for the auto-number.</inlineHelpText>
    <label>Object API Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>