force-app/main/default/objects/AutoNumber__c/fields/Starting_Number__c.field-meta.xml
<CustomField>
    <fullName>Starting_Number__c</fullName>
    <description>The first number in the auto-numbered sequence.</description>
    <inlineHelpText>The first number in the auto-numbered sequence.</inlineHelpText>
    <label>Starting Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>